get grafe for student
