# src/controllers/teacherController.ts
@@ -31,30 +31,40 @@ export const handelAddGrade = async (
     }
 };
 
-// export const handelGetGrades = async (req: Request, res: Response):Promise<void> => {
-//     try {
-//         const result =  await UserService.getByUserName(req.params.username);
-//         res.status(200).json(result)
-//     } catch (error) {
-//         console.log(error);
-//     }
-// };
+export const handelGetGrades = async (req: Request, res: Response):Promise<void> => {
+    try {
+        const token = req.cookies.auth_token;
+        
+        const decodedToken = jwt.verify(token, process.env.JWT_SECRET!);
+        const teacherId = (decodedToken as any).id;
+        const result =  await techerService.GetGrades(teacherId);
+        res.status(200).json(result)
+    } catch (error) {
+        console.log(error);
+    }
+};
 // export const handelGetAVG = async (req: Request, res: Response):Promise<void> => {
 //     try {
-//         const result =  await UserService.getByUserName(req.params.username);
-//         res.status(200).json(result)
+//         const token = req.cookies.auth_token;
+        
+//         const decodedToken = jwt.verify(token, process.env.JWT_SECRET!);
+//         const teacherId = (decodedToken as any).id;
+//         const result =  await techerService.GetAVG(teacherId);               res.status(200).json(result)
 //     } catch (error) {
 //         console.log(error);
 //     }
 // };
-// export const handelGetGrade = async (req: Request, res: Response):Promise<void> => {
-//     try {
-//         const result =  await UserService.getByUserName(req.params.username);
-//         res.status(200).json(result)
-//     } catch (error) {
-//         console.log(error);
-//     }
-// };
+export const handelGetGrade = async (req: Request, res: Response):Promise<void> => {
+    try {
+        const token = req.cookies.auth_token;
+        const decodedToken = jwt.verify(token, process.env.JWT_SECRET!);
+        const teacherId = (decodedToken as any).id;
+        const result =  await techerService.GetGrade(teacherId,req.params.id);
+        res.status(200).json(result)
+    } catch (error) {
+        console.log(error);
+    }
+};
 // export const handelEditeGrade = async (req: Request, res: Response):Promise<void> => {
 //     try {
 //         const result =  await UserService.getByUserName(req.params.username);
