# src/routes/techerRoutes.ts
@@ -1,7 +1,10 @@
 import { Router } from "express";
 import { 
     handelRegister, 
-    handelAddGrade
+    handelAddGrade,
+    handelGetGrades,
+    handelGetGrade
+    // handelGetAVG
  } from "../controllers/teacherController";
 // import verifyUser from "../middleware/verifyUser";
 
@@ -9,9 +12,9 @@ const techerRoute = Router();
 
 techerRoute.post("/",handelRegister);//create user
 techerRoute.post("/grades",handelAddGrade);//add grade
-// techerRoute.get("/",handelGetGrades);//get grades for class
+techerRoute.get("/grades",handelGetGrades);//get grades for class
 // techerRoute.get("/avg",handelGetAVG );//get avg grades
-// techerRoute.get("/:id",handelGetGrade );//get grades for student
+techerRoute.get("/:id",handelGetGrade );//get grades for student
 // techerRoute.patch("/", handelEditeGrade);//edite grade for student
 
 export default techerRoute;
